-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.1, 5.6.0 Beta
-
None
-
Linux with a plain window manager (not Gnome, not KDE); any platform that is missing a native FileDialog, when widgets are available
-
144bc5cedd9af5e62fe7210bac7df2c19d20c41b
qtquickcontrols/examples/quick/dialogs/systemdialogs
qrc:/dialogs/systemdialogs/FileDialogs.qml:174: TypeError: Cannot call method 'hasOwnProperty' of undefined
qrc:/dialogs/systemdialogs/FileDialogs.qml:181: TypeError: Cannot call method 'hasOwnProperty' of undefined
qrc:/dialogs/systemdialogs/FileDialogs.qml:182: TypeError: Cannot read property 'home' of undefined
That's because only QQuickFileDialog has this property. Maybe it needs to be moved up to QQuickAbstractFileDialog, and maybe have a virtual implementation.
High priority because it was added in 5.5, documented, and hasn't worked with the QFileDialog implementation.
For Gerrit Dashboard: QTBUG-50673 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
147422,3 | FileDialog: move shortcuts properties up to QQuickAbstractFileDialog | 5.6.0 | qt/qtquickcontrols | Status: MERGED | +2 | 0 |