FileDialog: move shortcuts properties up to QQuickAbstractFileDialog

QQuickQFileDialog does not inherit QQuickFileDialog, so the documented
shortcuts property was not defined if your platform happens to use the
QFileDialog implementation.  As long as we are moving the public
property, it's easiest to move everything related to shortcuts.

Task-number: QTBUG-50673
Change-Id: Ic2baf4a3c83ca12edf11d7d011aaa78a389e0fde
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@theqtcompany.com>